<resources>
    <string name="app_name">Калькулятор</string>
    <string name="start_text">0</string>

    <!--Подписи кнопок стандартного калькулятора-->
    <string name="main_btn_00">С</string>
    <string name="main_btn_01">+/-</string>
    <string name="main_btn_02">/</string>
    <string name="main_btn_03">×</string>
    <string name="main_btn_10">7</string>
    <string name="main_btn_11">8</string>
    <string name="main_btn_12">9</string>
    <string name="main_btn_13">-</string>
    <string name="main_btn_20">4</string>
    <string name="main_btn_21">5</string>
    <string name="main_btn_22">6</string>
    <string name="main_btn_23">+</string>
    <string name="main_btn_30">1</string>
    <string name="main_btn_31">2</string>
    <string name="main_btn_32">3</string>
    <string name="main_btn_33">=</string>
    <string name="main_btn_40">0</string>
    <string name="main_btn_41">,</string>

    <!--Подписи дополнительных кнопок инженерного калькулятора-->
    <string name="engnr_btn_0">%</string>
    <string name="engnr_btn_1">(</string>
    <string name="engnr_btn_2">)</string>
    <string name="engnr_btn_3">x²</string>
    <string name="engnr_btn_4">√x</string>

    <!--Подписи дополнительных кнопок инженерного калькулятора в горизонтальной ориентации-->
    <string name="engnr_btn_01">Sin</string>
    <string name="engnr_btn_02">Cos</string>
    <string name="engnr_btn_11">Tan</string>
    <string name="engnr_btn_12">Ctan</string>
    <string name="engnr_btn_21">Mod</string>
    <string name="engnr_btn_22">log10</string>
    <string name="engnr_btn_31">Pi</string>
    <string name="engnr_btn_32">Exp</string>
    <string name="engnr_btn_41">Rand</string>
    <string name="engnr_btn_42">Exp</string>

    <string name="settings">Настройки</string>
    <string name="settings1">О Программе</string>
    <string name="settings2">Изменить язык</string>
    <string name="setings3">Купить премиум</string>

    <string name="toast">В разработке</string>
</resources>
