<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".View.EngeneerCalc" android:orientation="vertical">

    <include
            layout="@layout/toolbar_main"
            android:id="@+id/toolBar"/>

    <TextView
            android:id="@+id/resultText"
            android:text="@string/start_text"
            android:textSize="@dimen/BigTextSize"
            android:textColor="@color/colorDark"
            android:paddingEnd="10dp"
            android:gravity="end|center_vertical"
            android:layout_width="match_parent"
            android:layout_height="94dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" tools:textAlignment="textEnd" android:elevation="100dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:background="@color/colorPrimaryLight"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <ImageView
                android:id="@+id/im1"
                android:src="@drawable/history_grey"
                android:layout_width="40dp"
                android:layout_height="55dp"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                app:layout_constraintVertical_bias="0.0"/>

        <TextView
                android:id="@+id/expresionText"
                android:textSize="@dimen/MediumTextSize"
                android:text="@string/start_text"
                android:textAlignment="textEnd"
                android:singleLine="true"
                android:ellipsize="start"
                android:layout_width="259dp"
                android:layout_height="wrap_content" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toStartOf="@+id/im2"
                android:layout_marginEnd="12dp" app:layout_constraintStart_toEndOf="@+id/im1"
                android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintVertical_bias="0.0"/>

        <ImageView
                android:id="@+id/im2"
                android:src="@drawable/delete_icon"
                android:layout_width="40dp"
                android:layout_height="40dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"/>



        <!--Клавиатура-->
        <GridLayout
                android:id="@+id/keyBoard"
                android:rowCount="5"
                android:columnCount="5"
                android:background="@color/colorPrimary"
                android:padding="15dp"
                android:layout_width="match_parent"
                android:layout_height="389dp" app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintVertical_bias="1.0">

            <!--Первая строка-->
            <Button
                    android:id="@+id/buttonC"
                    android:text="@string/main_btn_00"
                    style="@style/ButtonSign"/>

            <Button
                    android:id="@+id/buttonExp"
                    android:text="@string/engnr_btn_42"
                    style="@style/ButtonSign"/>

            <Button
                    android:id="@+id/buttonPi"
                    android:text="@string/engnr_btn_31"
                    style="@style/ButtonSign"/>

            <Button
                    android:id="@+id/buttonDev"
                    android:text="@string/main_btn_02"
                    style="@style/ButtonSign"/>

            <Button
                    android:id="@+id/buttonMul"
                    android:text="@string/main_btn_03"
                    style="@style/ButtonSign"/>

            <!--Вторая строка-->
            <Button
                    android:id="@+id/buttonOB"
                    android:text="@string/engnr_btn_1"
                    style="@style/ButtonSign"/>

            <Button
                    android:id="@+id/button7"
                    android:text="@string/main_btn_10"
                    style="@style/ButtonDigit"/>

            <Button
                    android:id="@+id/button8"
                    android:text="@string/main_btn_11"
                    style="@style/ButtonDigit"/>

            <Button
                    android:id="@+id/button9"
                    android:text="@string/main_btn_12"
                    style="@style/ButtonDigit"/>

            <Button
                    android:id="@+id/buttonMinus"
                    android:text="@string/main_btn_13"
                    style="@style/ButtonSign"/>

            <!--Третья строка-->
            <Button
                    android:id="@+id/buttonCB"
                    android:text="@string/engnr_btn_2"
                    style="@style/ButtonSign"/>

            <Button
                    android:id="@+id/button4"
                    android:text="@string/main_btn_20"
                    style="@style/ButtonDigit"/>

            <Button
                    android:id="@+id/button5"
                    android:text="@string/main_btn_21"
                    style="@style/ButtonDigit"/>

            <Button
                    android:id="@+id/button6"
                    android:text="@string/main_btn_22"
                    style="@style/ButtonDigit"/>

            <Button
                    android:id="@+id/buttonPlus"
                    android:text="@string/main_btn_23"
                    style="@style/ButtonSign"/>


            <!--Четвертая строка-->
            <Button
                    android:id="@+id/buttonSqr"
                    android:text="@string/engnr_btn_3"
                    style="@style/ButtonSign"/>

            <Button
                    android:id="@+id/button1"
                    android:text="@string/main_btn_30"
                    style="@style/ButtonDigit"/>

            <Button
                    android:id="@+id/button2"
                    android:text="@string/main_btn_31"
                    style="@style/ButtonDigit"/>

            <Button
                    android:id="@+id/button3"
                    android:text="@string/main_btn_32"
                    style="@style/ButtonDigit"/>

            <Button
                    android:id="@+id/buttonEqual"
                    android:text="@string/main_btn_33"
                    style="@style/ButtonSign"
                    android:background="@color/colorAccent"
                    android:layout_rowSpan="2"/>

            <!--Пятая строка-->
            <Button
                    android:id="@+id/buttonSqrt"
                    android:text="@string/engnr_btn_4"
                    style="@style/ButtonSign"/>

            <Button
                    android:id="@+id/button0"
                    android:text="@string/main_btn_40"
                    style="@style/ButtonDigit"
                    android:layout_columnSpan="2"/>

            <Button
                    android:id="@+id/buttonComa"
                    android:text="@string/main_btn_41"
                    style="@style/ButtonDigit"/>

        </GridLayout>

        <FrameLayout
                android:id="@+id/historyFragment"
                android:layout_width="297dp"
                android:layout_height="394dp"
                android:layout_marginTop="52dp" app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.0"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>