<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorPrimaryLight"
        tools:context=".View.Settings">

    <include
            layout="@layout/toolbar_settings"
            android:id="@+id/toolBar"/>


    <LinearLayout
            android:id="@+id/settings1"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginVertical="10dp"
            android:padding="10dp"
            android:orientation="horizontal"
            android:background="@color/colorPrimary">

        <ImageView
                android:layout_gravity="center_vertical"
                android:src="@drawable/info_icon"
                android:layout_width="50dp"
                android:layout_height="50dp"/>

        <TextView
                android:layout_marginStart="10dp"
                android:textSize="@dimen/MediumTextSize"
                android:layout_gravity="center_vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/settings1"
                android:textColor="@color/colorWhite"
                android:layout_weight="1"/>

        <ImageView
                android:layout_gravity="center_vertical"
                android:src="@drawable/arrow"
                android:layout_width="40dp"
                android:layout_height="40dp"/>
    </LinearLayout>

    <LinearLayout
            android:id="@+id/settings2"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginVertical="5dp"
            android:padding="10dp"
            android:orientation="horizontal"
            android:background="@color/colorPrimary">

        <ImageView
                android:layout_gravity="center_vertical"
                android:src="@drawable/language_icon"
                android:layout_width="50dp"
                android:layout_height="50dp"/>

        <TextView
                android:layout_marginStart="10dp"
                android:textSize="@dimen/MediumTextSize"
                android:layout_gravity="center_vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/settings2"
                android:textColor="@color/colorWhite"
                android:layout_weight="1"/>

        <ImageView
                android:layout_gravity="center_vertical"
                android:src="@drawable/arrow"
                android:layout_width="40dp"
                android:layout_height="40dp"/>
    </LinearLayout>

    <LinearLayout
            android:id="@+id/settings3"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginVertical="5dp"
            android:padding="10dp"
            android:orientation="horizontal"
            android:background="@color/colorPrimary">

        <ImageView
                android:layout_gravity="center_vertical"
                android:src="@drawable/money_icon"
                android:layout_width="50dp"
                android:layout_height="50dp"/>

        <TextView
                android:textSize="@dimen/MediumTextSize"
                android:layout_marginStart="10dp"
                android:layout_gravity="center_vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/setings3"
                android:textColor="@color/colorWhite"
                android:layout_weight="1"/>

        <ImageView
                android:layout_gravity="center_vertical"
                android:src="@drawable/arrow"
                android:layout_width="40dp"
                android:layout_height="40dp"/>
    </LinearLayout>

</LinearLayout>